# RootDriver

./: .gitignore  CHANGELOG.md  README.md  example.py  pyproject.toml
rootdriver/: __init__.py  agent.py  constants.py  conversation.py  conversation_repo.py  engine.py  exception.py  exceptions.py  state.py
rootdriver/db/: __init__.py  base_db.py  json_db.py
rootdriver/llm/: __init__.py  base_adapter.py  llm.py
rootdriver/llm/adapter/: __init__.py  anthropic_adapter.py  openai_adapter.py
rootdriver/state/: state.py
rootdriver/tool/: __init__.py  base_tool.py  tools.py
rootdriver/types/: __init__.py  agent.py  config.py  llm.py  message.py  messages.py  tool.py
rootdriver/utils/: __init__.py  build_message.py  file.py  optional_dependence.py  strip_think.py  time.py
tests/: test_anthropic_adapter.py  test_base_tool.py  test_conversation.py  test_state.py  test_tool.py  test_tool_async.py
