[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rootdriver"
version = "0.3.0"
description = "Rooted in Origin, Driving All Things"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "zimvir", email = "zimvir@qq.com"}
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["rootdriver"]